--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -2,62 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "13693c65",
+   "execution_count": 29,
+   "id": "b0edf4cb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "角A: 44.42 度\n",
-      "角B: 57.12 度\n",
-      "角C: 78.46 度\n"
+      "角度為 36.87 度\n"
+     ]
+    }
+   ],
+   "source": [
+    "degrees = 36.86989764584401\n",
+    "print(f\"角度為 {degrees:.2f} 度\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6e468646",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "角度為 30.00 度\n"
      ]
     }
    ],
    "source": [
     "import math\n",
     "\n",
-    "# 假設三角形三邊長為：\n",
-    "a = 5\n",
-    "b = 6\n",
-    "c = 7\n",
+    "# 假設對邊長為 3，斜邊長為 5\n",
+    "opposite = 25\n",
+    "hypotenuse = 50\n",
     "\n",
-    "# 計算角 A（對邊是 a）\n",
-    "angle_A = math.degrees(math.acos((b**2 + c**2 - a**2) / (2 * b * c)))\n",
+    "# 求角度（使用反正弦函數）\n",
+    "radians = math.asin(opposite / hypotenuse)\n",
     "\n",
-    "# 計算角 B（對邊是 b）\n",
-    "angle_B = math.degrees(math.acos((a**2 + c**2 - b**2) / (2 * a * c)))\n",
+    "# 將弧度轉換為角度\n",
+    "degrees = math.degrees(radians)\n",
     "\n",
-    "# 計算角 C（對邊是 c）\n",
-    "angle_C = 180 - angle_A - angle_B  # 用內角和補出第三角\n",
-    "\n",
-    "# 顯示結果\n",
-    "print(f\"角A: {angle_A:.2f} 度\")\n",
-    "print(f\"角B: {angle_B:.2f} 度\")\n",
-    "print(f\"角C: {angle_C:.2f} 度\")\n"
+    "print(f\"角度為 {degrees:.2f} 度\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "8569e751",
+   "execution_count": 27,
+   "id": "ada47514",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n"
+      "Alice\n",
+      "25\n",
+      "1.65\n",
+      "True\n",
+      "總和是：15\n",
+      "Hello-World-!-56!\n"
      ]
     }
    ],
    "source": [
-    "a = 5\n",
-    "b = 3\n",
-    "sum = a + b\n",
-    "print(sum)  # 輸出：8\n"
+    "name = \"Alice\"         # 字串（string）\n",
+    "age = 25               # 整數（integer）\n",
+    "height = 1.65          # 浮點數（float）\n",
+    "is_student = True      # 布林值（boolean）\n",
+    "\n",
+    "print(name)\n",
+    "print(age)\n",
+    "print(height)\n",
+    "print(is_student)\n",
+    "\n",
+    "\n",
+    "a = 10\n",
+    "b = 5\n",
+    "sum_result = a + b\n",
+    "print(\"總和是：\", sum_result, sep='')\n",
+    "\n",
+    "a ** b\n",
+    "\n",
+    "print('Hello', 'World', \"!\", 56, sep='-', end='!\\n')"
    ]
   },
   {
