--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "7ec079a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Frank\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Frank\"\n",
+    "greeting = \"Hello, \" + name\n",
+    "print(greeting)  # 輸出：Hello, Frank\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "8f78e0be",
    "metadata": {},
    "outputs": [
