--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5af7db51",
    "metadata": {},
    "outputs": [
@@ -11,6 +11,7 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: nest_asyncio in c:\\users\\user\\miniconda3\\lib\\site-packages (1.6.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
       "開始任務 1\n",
       "開始任務 2\n",
       "任務 1 完成\n",
@@ -21,7 +22,7 @@
    ],
    "source": [
     "# 安裝 nest_asyncio（第一次執行時才需要）\n",
-    "!pip install nest_asyncio\n",
+    "%pip install nest_asyncio\n",
     "\n",
     "# 套用 nest_asyncio，讓 asyncio.run 在 Notebook 內可以正常執行\n",
     "import nest_asyncio\n",
